<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.subroto.english.hotelmanagement.ui.main.quiz.about_quiz.AboutQuizDialog">

    <data>

        <variable
            name="viewModel"
            type="com.subroto.english.hotelmanagement.ui.main.quiz.about_quiz.AboutQuizDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_close_button"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/close"
            app:layout_constraintBottom_toTopOf="@id/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/body"
            android:layout_width="0dp"
            android:layout_height="@dimen/_390sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/round_corner_quiz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_close_button">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/about_quiz_icon"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorWhite"
                android:src="@drawable/check"
                app:layout_constraintEnd_toStartOf="@id/text1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_quiz" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorWhite"
                android:text="@string/text1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/checked"
                app:layout_constraintStart_toEndOf="@id/checked"
                app:layout_constraintTop_toTopOf="@id/checked" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checked2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorWhite"
                android:src="@drawable/check"
                app:layout_constraintEnd_toStartOf="@id/text2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checked" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorWhite"
                android:text="@string/text2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/checked2"
                app:layout_constraintStart_toEndOf="@id/checked2"
                app:layout_constraintTop_toTopOf="@id/checked2"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checked3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorWhite"
                android:src="@drawable/check"
                app:layout_constraintEnd_toStartOf="@id/text3"
                app:layout_constraintHorizontal_bias="0.54"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checked2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorWhite"
                android:text="@string/text3"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/checked3"
                app:layout_constraintStart_toEndOf="@id/checked3"
                app:layout_constraintTop_toTopOf="@id/checked3" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checked4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorWhite"
                android:src="@drawable/check"
                app:layout_constraintEnd_toStartOf="@id/text4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checked3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:background="@color/colorWhite"
                android:text="@string/text4"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/checked4"
                app:layout_constraintStart_toEndOf="@id/checked4"
                app:layout_constraintTop_toTopOf="@id/checked4" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/checked5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/colorWhite"
                android:src="@drawable/check"
                app:layout_constraintEnd_toStartOf="@id/text5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checked4" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/colorWhite"
                android:text="@string/text5"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/checked5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/checked5"
                app:layout_constraintTop_toTopOf="@id/checked5"
                app:layout_constraintVertical_bias="0.47000003" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_42sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_42sdp"
                android:background="@drawable/rounded_corners"
                android:text="Play Quiz"
                android:textColor="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>